tests/miniJava/neg/004228_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { class public int [] java ( ) { return 0 ; } }
